--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "node ./test"
   },
   "author": "bluntworks",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "through": "~2.3.4",
+    "eiojson": "~0.9.0"
+  }
 }
