--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "through": "~2.3.4",
-    "eiojson": "~0.9.0"
+    "eiojson": "~0.9.0",
+    "lodash": "~2.2.1"
   }
 }
