--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "through": "~2.3.4",
     "eiojson": "~0.9.0",
-    "lodash": "~2.2.1"
+    "lodash": "~2.2.1",
+    "nym": "0.0.1",
+    "cookie-signature": "~1.0.1",
+    "cookie": "~0.1.0"
   }
 }
