--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "node ./test"
   },
+  "repository": "git@github.com:bluntworks/blunt-eio-stream.git"
   "author": "bluntworks",
   "license": "MIT",
   "dependencies": {
