--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node ./test"
   },
-  "repository": "git@github.com:bluntworks/blunt-eio-stream.git"
+  "repository": "git@github.com:bluntworks/blunt-eio-stream.git",
   "author": "bluntworks",
   "license": "MIT",
   "dependencies": {
@@ -15,6 +15,7 @@
     "lodash": "~2.2.1",
     "nym": "0.0.1",
     "cookie-signature": "~1.0.1",
-    "cookie": "~0.1.0"
+    "cookie": "~0.1.0",
+    "blunt-log": "0.0.1"
   }
 }
